@@ -172,14 +172,9 @@
 
 @interface PseudoTerminal (Private)
 
-- (void) _buildAddressBookMenu: (NSMenu *) abMenu newWindow: (BOOL) newWinFlag;
 - (void) _buildToolbarItemPopUpMenu: (NSToolbarItem *) toolbarItem;
 - (void) _reloadAddressBookMenu: (NSNotification *) aNotification;
 - (void) _toggleNewWindowState: (id) sender;
-- (void) _executeABMenuCommandInNewTab: (id) sender;
-- (void) _executeABMenuCommandInNewWindow: (id) sender;
-- (void) _executeABMenuCommand: (int) commandIndex newWindow: (BOOL) theFlag;
-
 
 @end
 
