@@ -1,3 +1,10 @@
+2003-01-27	Ujwal S. Sathyam <ujwal@setlurgroup.com>
+
+    * Refactored a lot of the addressbook menu building code.
+    
+    * Added addressbook menu to dock menu.
+    
+
 2003-01-25	Ujwal S. Sathyam <ujwal@setlurgroup.com>
 
     * Address Book window now has Autosave name.
